# villa-control

./: CMakeLists.txt  readme.md
src/: CMakeLists.txt  actuator.cpp  actuator.h  clientconnection.cpp  clientconnection.h  connection.cpp  connection.h  device.cpp  device.h  devicewde1.cpp  devicewde1.h  eventmanager.cpp  eventmanager.h  internalconnection.cpp  internalconnection.h  main.cpp  program.cpp  program.h  sctpconnection.cpp  sctpconnection.h  sensor.cpp  sensor.h  serialport.cpp  serialport.h  serverconnection.cpp  serverconnection.h  tcpclientconnection.cpp  tcpclientconnection.h  tcpconnection.cpp  tcpconnection.h  ttyconnection.cpp  ttyconnection.h  udsconnection.cpp  udsconnection.h  udsserverconnection.cpp  udsserverconnection.h
test/: CMakeLists.txt  testdevice.cpp
